commit translated contents

--- a/lifecycle-data/products/microsoft-office-communicator-2005.yml
+++ b/lifecycle-data/products/microsoft-office-communicator-2005.yml
@@ -4,23 +4,28 @@ metadata:
   description: Microsoft Office Communicator 2005 volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
   keywords: Standard
-  ms.openlocfilehash: 63747b4e26cc52df003704a5cda3a3bcd637a8c1
-  ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
-  ms.translationtype: HT
-  ms.contentlocale: nl-NL
-  ms.lasthandoff: 09/01/2020
-  ms.locfileid: "936258"
 name: Microsoft Office Communicator 2005
-summary: "Microsoft Office Communicator 2005 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.\n\nDit geldt voor de volgende edities: Standaard\n\n> [!IMPORTANT]\n> De ondersteuning voor dit product is beëindigd. \n"
+summary: |
+  Microsoft Office Communicator 2005 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
+
+  Dit geldt voor de volgende edities: Standaard
+
+  > [!IMPORTANT]
+  > De ondersteuning voor dit product is beëindigd. 
 products:
-- office
+  - office
 policyType: fixed
 supportDates:
   start: 08/13/2005
   end: 10/12/2010
   extendedEnd: 10/13/2015
 releases:
-- version: Original Release
-  startDate: 08/13/2005
-  endDate: 10/13/2015
-content: "\n\n\n## <a name=\"editions\"></a>Edities \n* Standard"
+  - version: Original Release
+    startDate: 08/13/2005
+    endDate: 10/13/2015
+content: |
+
+
+
+  ## <a name="editions"></a>Edities 
+  * Standard
