--- a/lifecycle-data/products/microsoft-powerpoint-2008-for-mac.yml
+++ b/lifecycle-data/products/microsoft-powerpoint-2008-for-mac.yml
@@ -3,25 +3,19 @@ metadata:
   title: Microsoft PowerPoint 2008 voor Mac
   description: Microsoft PowerPoint 2008 voor Mac volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
-  ms.openlocfilehash: d562e552415d34d4ae5bdc7e18e9656925cbb705
-  ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: HT
-  ms.contentlocale: nl-NL
-  ms.lasthandoff: 07/28/2020
-  ms.locfileid: "811948"
 name: Microsoft PowerPoint 2008 voor Mac
-summary: >+
+summary: |+
   Microsoft PowerPoint 2008 voor Mac volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
-- office
+  - office
 policyType: fixed-mainstream-only
 supportDates:
   start: 03/12/2008
   end: 04/09/2013
 releases:
-- version: Original Release
-  startDate: 03/12/2008
-  endDate: 04/09/2013
-content: ''
+  - version: Original Release
+    startDate: 03/12/2008
+    endDate: 04/09/2013
+content: |+
