--- a/lifecycle-data/products/microsoft-powerpoint-2010.yml
+++ b/lifecycle-data/products/microsoft-powerpoint-2010.yml
@@ -3,29 +3,28 @@ metadata:
   title: Microsoft PowerPoint 2010
   description: Microsoft PowerPoint 2010 volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
-  keywords: Home and Student,Standard
-  ms.openlocfilehash: 456aacd4e7c600f852b3a7fb169afc68163bf95c
-  ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
-  ms.translationtype: HT
-  ms.contentlocale: nl-NL
-  ms.lasthandoff: 09/01/2020
-  ms.locfileid: "930042"
+  keywords: 'Home and Student,Standard'
 name: Microsoft PowerPoint 2010
-summary: >+
+summary: |+
   Microsoft PowerPoint 2010 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
-
 
   Dit is van toepassing op de volgende edities: Thuisgebruik en Studenten, Standaard
 
 products:
-- office
+  - office
 policyType: fixed
 supportDates:
   start: 07/15/2010
   end: 10/13/2015
   extendedEnd: 10/13/2020
 releases:
-- version: Original Release
-  startDate: 07/15/2010
-  endDate: 10/13/2020
-content: "\n\n\n## <a name=\"editions\"></a>Edities \n* Thuisgebruik en Studenten\n* Standard"
+  - version: Original Release
+    startDate: 07/15/2010
+    endDate: 10/13/2020
+content: |
+
+
+
+  ## <a name="editions"></a>Edities 
+  * Thuisgebruik en Studenten
+  * Standard
