--- a/lifecycle-data/products/microsoft-sql-server-2008-r2.yml
+++ b/lifecycle-data/products/microsoft-sql-server-2008-r2.yml
@@ -3,47 +3,63 @@ metadata:
   title: Microsoft SQL Server 2008 R2
   description: Microsoft SQL Server 2008 R2 volgt het vaste levenscyclusbeleid.
   ms.date: 04/23/2021
-  keywords: 
-  ms.openlocfilehash: d18b8ab6918149d81b686c3a63ac65441be3d37b
-  ms.sourcegitcommit: 51a7221b87d358960376e2569c3b1e69ba056b54
-  ms.translationtype: HT
-  ms.contentlocale: nl-NL
-  ms.lasthandoff: 06/25/2021
-  ms.locfileid: "2028908"
+  keywords: null
 name: Microsoft SQL Server 2008 R2
-summary: >+
+summary: |+
   Microsoft SQL Server 2008 R2 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
-
 
   Dit is van toepassing op de volgende edities: Datacenter, Developer, Enterprise, Express, Express met geavanceerde services, voor Embedded Systems, Standard, standaardeditie voor Professionals en Kleine Bedrijven, Web, Workgroup
 
 products:
-- sql-server
+  - sql-server
 policyType: fixed
 supportDates:
   start: 07/20/2010
   end: 07/08/2014
   extendedEnd: 07/09/2019
 releases:
-- version: Extended Security Update Year 3
-  startDate: 07/14/2021
-  endDate: 07/12/2022
-- version: Extended Security Update Year 2
-  startDate: 07/15/2020
-  endDate: 07/13/2021
-- version: Extended Security Update Year 1
-  startDate: 07/09/2019
-  endDate: 07/14/2020
-- version: Service Pack 3
-  startDate: 07/07/2014
-  endDate: 07/09/2019
-- version: Service Pack 2
-  startDate: 07/26/2012
-  endDate: 10/13/2015
-- version: Service Pack 1
-  startDate: 07/12/2011
-  endDate: 10/08/2013
-- version: Original Release
-  startDate: 07/20/2010
-  endDate: 07/10/2012
-content: "> [!TIP]\n> *Voor de Datacenter-, Standaard-, Enterprise- en Embedded-editie van dit product zijn extra beveiligingsupdates (ESU) beschikbaar, en dit voor maximaal drie jaar na het einde van de ondersteuning. Neem contact op met uw Microsoft-partner of accountteam voor meer informatie. \n\n## <a name=\"links\"></a>Koppelingen \n* [Opties voor einde van de ondersteuning voor SQL Server 2008 en Windows Server 2008](https://azure.microsoft.com/blog/announcing-new-options-for-sql-server-2008-and-windows-server-2008-end-of-support/)\n* [Einde van de ondersteuning van SQL Server](/sql/sql-server/end-of-support/sql-server-end-of-life-overview)\n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n* [Extended Security Update (ESU) programma](/lifecycle/faq/extended-security-updates)\n\n> [!NOTE]\n> Alleen voor IA64 wordt SP2 ondersteund tot 09/07/2019. Raadpleeg de SQL Release Services-blog voor meer informatie.\n\n## <a name=\"editions\"></a>Edities \n* Datacenter\n* Developer\n* Enterprise\n* Express\n* Express met geavanceerde services\n* voor Embedded Systems\n* Standard\n* Standaardeditie voor Professionals en Kleine Bedrijven\n* Web\n* Workgroup"
+  - version: Extended Security Update Year 3
+    startDate: 07/14/2021
+    endDate: 07/12/2022
+  - version: Extended Security Update Year 2
+    startDate: 07/15/2020
+    endDate: 07/13/2021
+  - version: Extended Security Update Year 1
+    startDate: 07/09/2019
+    endDate: 07/14/2020
+  - version: Service Pack 3
+    startDate: 07/07/2014
+    endDate: 07/09/2019
+  - version: Service Pack 2
+    startDate: 07/26/2012
+    endDate: 10/13/2015
+  - version: Service Pack 1
+    startDate: 07/12/2011
+    endDate: 10/08/2013
+  - version: Original Release
+    startDate: 07/20/2010
+    endDate: 07/10/2012
+content: |
+  > [!TIP]
+  > *Voor de Datacenter-, Standaard-, Enterprise- en Embedded-editie van dit product zijn extra beveiligingsupdates (ESU) beschikbaar, en dit voor maximaal drie jaar na het einde van de ondersteuning. Neem contact op met uw Microsoft-partner of accountteam voor meer informatie. 
+
+  ## <a name="links"></a>Koppelingen 
+  * [Opties voor einde van de ondersteuning voor SQL Server 2008 en Windows Server 2008](https://azure.microsoft.com/blog/announcing-new-options-for-sql-server-2008-and-windows-server-2008-end-of-support/)
+  * [Einde van de ondersteuning van SQL Server](/sql/sql-server/end-of-support/sql-server-end-of-life-overview)
+  * [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)
+  * [Extended Security Update (ESU) programma](/lifecycle/faq/extended-security-updates)
+
+  > [!NOTE]
+  > Alleen voor IA64 wordt SP2 ondersteund tot 09/07/2019. Raadpleeg de SQL Release Services-blog voor meer informatie.
+
+  ## <a name="editions"></a>Edities 
+  * Datacenter
+  * Developer
+  * Enterprise
+  * Express
+  * Express met geavanceerde services
+  * voor Embedded Systems
+  * Standard
+  * Standaardeditie voor Professionals en Kleine Bedrijven
+  * Web
+  * Workgroup
