--- a/lifecycle-data/products/windows-server-2008-for-windows-essential-server-solutions.yml
+++ b/lifecycle-data/products/windows-server-2008-for-windows-essential-server-solutions.yml
@@ -3,36 +3,36 @@ metadata:
   title: Windows Server 2008 voor Windows Essential Server Solutions
   description: Windows Server 2008 voor Windows Essential Server Solutions volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
-  keywords: Standard,without Hyper-V
-  ms.openlocfilehash: dd1f811a9e93cdfe97655a9cfd030cfffdbd1116
-  ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
-  ms.translationtype: HT
-  ms.contentlocale: nl-NL
-  ms.lasthandoff: 09/01/2020
-  ms.locfileid: "939551"
+  keywords: 'Standard,without Hyper-V'
 name: Windows Server 2008 voor Windows Essential Server Solutions
-summary: >
+summary: |
   Windows Server 2008 voor Windows Essential Server Solutions volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
-
 
   Dit is van toepassing op de volgende edities: Standaard, zonder Hyper-V
 
-
   > [!IMPORTANT]
-
   > De ondersteuning voor dit product is beëindigd. Zie hieronder de richtlijnen voor migratie.
 products:
-- windows
+  - windows
 policyType: fixed
 supportDates:
   start: 02/18/2009
   end: 01/13/2015
   extendedEnd: 01/14/2020
 releases:
-- version: Service Pack 2
-  startDate: 04/29/2009
-  endDate: 01/14/2020
-- version: Original Release
-  startDate: 02/18/2009
-  endDate: 07/12/2011
-content: "\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor migratie](https://aka.ms/AA1ovn4)\n* [Productgegevens](https://cloudblogs.microsoft.com/windowsserver/2008/02/20/introducing-windows-essential-server-solutions/)\n\n\n## <a name=\"editions\"></a>Edities \n* Standard\n* zonder Hyper-V"
+  - version: Service Pack 2
+    startDate: 04/29/2009
+    endDate: 01/14/2020
+  - version: Original Release
+    startDate: 02/18/2009
+    endDate: 07/12/2011
+content: |
+
+  ## <a name="links"></a>Koppelingen 
+  * [Richtlijnen voor migratie](https://aka.ms/AA1ovn4)
+  * [Productgegevens](https://cloudblogs.microsoft.com/windowsserver/2008/02/20/introducing-windows-essential-server-solutions/)
+
+
+  ## <a name="editions"></a>Edities 
+  * Standard
+  * zonder Hyper-V
