--- a/lifecycle-data/products/windows-small-business-server-2008.yml
+++ b/lifecycle-data/products/windows-small-business-server-2008.yml
@@ -3,23 +3,36 @@ metadata:
   title: Windows Small Business Server 2008
   description: Windows Small Business Server 2008 volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
-  keywords: Premium,Standard
-  ms.openlocfilehash: 947f1cc48a1ef1b5397103a64ce7fb2f3e52db2d
-  ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
-  ms.translationtype: HT
-  ms.contentlocale: nl-NL
-  ms.lasthandoff: 09/01/2020
-  ms.locfileid: "939181"
+  keywords: 'Premium,Standard'
 name: Windows Small Business Server 2008
-summary: "Windows Small Business Server 2008 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.\n\nDit is van toepassing op de volgende edities: Premium, Standard\n\n> [!IMPORTANT]\n> De ondersteuning voor dit product is beëindigd. \n\nDe ondersteuningsdatum voor dit productpakket wordt bepaald door de respectievelijke levenscyclus van het afzonderlijke onderdeelproduct. Bekijk de levenscyclus van het afzonderlijke onderdeelproduct om de duur van de ondersteuning te bepalen.\n"
+summary: |
+  Windows Small Business Server 2008 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
+
+  Dit is van toepassing op de volgende edities: Premium, Standard
+
+  > [!IMPORTANT]
+  > De ondersteuning voor dit product is beëindigd. 
+
+  De ondersteuningsdatum voor dit productpakket wordt bepaald door de respectievelijke levenscyclus van het afzonderlijke onderdeelproduct. Bekijk de levenscyclus van het afzonderlijke onderdeelproduct om de duur van de ondersteuning te bepalen.
 products:
-- windows
+  - windows
 policyType: fixed
 supportDates:
   start: 11/21/2008
   extendedEnd: 01/14/2020
 releases:
-- version: Original Release
-  startDate: 11/21/2008
-  endDate: 01/14/2020
-content: "\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor migratie](https://aka.ms/AA1ovn4)\n* [Windows Server 2008](/lifecycle/browse/listings/windows-server-2008)\n* [Exchange Server 2007](/lifecycle/browse/listings/exchange-server-2007)\n* [Microsoft Windows SharePoint Services 3.0](/lifecycle/browse/listings/microsoft-windows-sharepoint-services-30)\n\n\n## <a name=\"editions\"></a>Edities \n* Premium\n* Standard"
+  - version: Original Release
+    startDate: 11/21/2008
+    endDate: 01/14/2020
+content: |
+
+  ## <a name="links"></a>Koppelingen 
+  * [Richtlijnen voor migratie](https://aka.ms/AA1ovn4)
+  * [Windows Server 2008](/lifecycle/browse/listings/windows-server-2008)
+  * [Exchange Server 2007](/lifecycle/browse/listings/exchange-server-2007)
+  * [Microsoft Windows SharePoint Services 3.0](/lifecycle/browse/listings/microsoft-windows-sharepoint-services-30)
+
+
+  ## <a name="editions"></a>Edities 
+  * Premium
+  * Standard
