commit translated contents

--- a/lifecycle-data/products/index.yml
+++ b/lifecycle-data/products/index.yml
@@ -1,11 +1,13 @@
 ### YamlMime:ContentBrowser
 title: Zoeken in informatie over de levenscyclus voor producten en services
 browseType: lifecycle
-summary: "\n> [!NOTE]\n> Levenscyclusgegevens exporteren vanuit de pagina [Levenscyclus exporteren.](/lifecycle/products/export)\n\n\nMicrosoft Lifecycle biedt consistente en voorspelbare richtlijnen voor de ondersteuning gedurende de levensduur van het product. Hierdoor kunnen klanten hun IT-investeringen en -omgevingen beheren en tegelijkertijd strategische plannen maken voor de toekomst.\n\n\nZoek hieronder voor een lijst met commerciële producten en services van Microsoft. Selecteer uw zoekresultaat om de tijdlijnen voor ondersteuning en services, de vereiste updates, de migratiegegevens en de systeemvereisten weer te geven."
-metadata:
-  ms.openlocfilehash: c874ff14f0c8c755cda09d9e1580e196ae601e7e
-  ms.sourcegitcommit: adca90be401b37b1ccfe6a6ce3fe265bd2e1f0de
-  ms.translationtype: HT
-  ms.contentlocale: nl-NL
-  ms.lasthandoff: 09/02/2020
-  ms.locfileid: "943028"
+summary: |-
+
+  > [!NOTE]
+  > Levenscyclusgegevens exporteren vanuit de pagina [Levenscyclus exporteren.](/lifecycle/products/export)
+
+
+  Microsoft Lifecycle biedt consistente en voorspelbare richtlijnen voor de ondersteuning gedurende de levensduur van het product. Hierdoor kunnen klanten hun IT-investeringen en -omgevingen beheren en tegelijkertijd strategische plannen maken voor de toekomst.
+
+
+  Zoek hieronder voor een lijst met commerciële producten en services van Microsoft. Selecteer uw zoekresultaat om de tijdlijnen voor ondersteuning en services, de vereiste updates, de migratiegegevens en de systeemvereisten weer te geven.
