--- a/lifecycle-data/products/sharepoint-designer-2013.yml
+++ b/lifecycle-data/products/sharepoint-designer-2013.yml
@@ -4,28 +4,30 @@ metadata:
   description: SharePoint Designer 2013 volgt het vaste levenscyclusbeleid.
   ms.date: 09/10/2020
   keywords: Designer
-  ms.openlocfilehash: 158c0dee37ae297e6ef3c14e3c74ab1996eaad21
-  ms.sourcegitcommit: c0c65f657b1da8e588fda5bedd3572fb2e3168bc
-  ms.translationtype: HT
-  ms.contentlocale: nl-NL
-  ms.lasthandoff: 09/10/2020
-  ms.locfileid: "1001125"
 name: SharePoint Designer 2013
-summary: >+
+summary: |+
   SharePoint Designer 2013 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
-
 
   Dit geldt voor de volgende edities: Designer
 
 products:
-- office
+  - office
 policyType: fixed
 supportDates:
   start: 01/09/2013
   end: 07/13/2021
   extendedEnd: 07/14/2026
 releases:
-- version: Original Release
-  startDate: 01/09/2013
-  endDate: 04/14/2015
-content: "\n## <a name=\"links\"></a>Koppelingen \n* [Ondersteuningsinformatie](https://blogs.office.com/2016/01/20/sharepoint-server-2016-and-project-server-2016-release-candidate-available)\n\n> [!NOTE]\n> De ondersteuning voor Microsoft SharePoint Designer 2013 is uitgebreid zoals weergegeven om compatibiliteit met SharePoint Server 2016 te garanderen.\n\n## <a name=\"editions\"></a>Edities \n* Designer"
+  - version: Original Release
+    startDate: 01/09/2013
+    endDate: 04/14/2015
+content: |
+
+  ## <a name="links"></a>Koppelingen 
+  * [Ondersteuningsinformatie](https://blogs.office.com/2016/01/20/sharepoint-server-2016-and-project-server-2016-release-candidate-available)
+
+  > [!NOTE]
+  > De ondersteuning voor Microsoft SharePoint Designer 2013 is uitgebreid zoals weergegeven om compatibiliteit met SharePoint Server 2016 te garanderen.
+
+  ## <a name="editions"></a>Edities 
+  * Designer
