--- a/lifecycle-data/products/visual-studio-team-system-2008.yml
+++ b/lifecycle-data/products/visual-studio-team-system-2008.yml
@@ -3,36 +3,42 @@ metadata:
   title: Visual Studio Team System 2008
   description: Visual Studio Team System 2008 volgt het vaste levenscyclusbeleid.
   ms.date: 09/02/2020
-  keywords: All,Architecture,Database,Development,Team Explorer,Team Test Load Agent,TFS
-  ms.openlocfilehash: 41a7a602e0aea666c7da8593af19243a881ec064
-  ms.sourcegitcommit: 27cfc07314fb17289e3d7cad15c37b591d53621a
-  ms.translationtype: HT
-  ms.contentlocale: nl-NL
-  ms.lasthandoff: 09/03/2020
-  ms.locfileid: "945291"
+  keywords: 'All,Architecture,Database,Development,Team Explorer,Team Test Load Agent,TFS'
 name: Visual Studio Team System 2008
-summary: >
+summary: |
   Visual Studio Team System 2008 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
-
 
   Dit geldt voor de volgende edities: alle, Architecture, Database, Development, Team Explorer, Team Test Load Agent, TFS
 
-
   > [!IMPORTANT]
-
   > De ondersteuning is beëindigd. Zie hieronder de richtlijnen voor migratie.
 products:
-- vs
+  - vs
 policyType: fixed
 supportDates:
   start: 02/19/2008
   end: 04/09/2013
   extendedEnd: 04/10/2018
 releases:
-- version: Service Pack 1
-  startDate: 08/11/2008
-  endDate: 04/10/2018
-- version: Original Release
-  startDate: 02/19/2008
-  endDate: 10/13/2009
-content: "\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor migratie](/visualstudio/porting/port-migrate-and-upgrade-visual-studio-projects?view=vs-2019)\n* [Richtlijnen voor migratie](https://blogs.msdn.microsoft.com/visualstudio/2017/04/10/end-of-support-for-visual-studio-2008-in-one-year)\n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n\n\n## <a name=\"editions\"></a>Edities \n* Alles\n* Architectuur\n* Database\n* Development\n* Team Explorer\n* Team Test Load Agent\n* TFS"
+  - version: Service Pack 1
+    startDate: 08/11/2008
+    endDate: 04/10/2018
+  - version: Original Release
+    startDate: 02/19/2008
+    endDate: 10/13/2009
+content: |
+
+  ## <a name="links"></a>Koppelingen 
+  * [Richtlijnen voor migratie](/visualstudio/porting/port-migrate-and-upgrade-visual-studio-projects?view=vs-2019)
+  * [Richtlijnen voor migratie](https://blogs.msdn.microsoft.com/visualstudio/2017/04/10/end-of-support-for-visual-studio-2008-in-one-year)
+  * [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)
+
+
+  ## <a name="editions"></a>Edities 
+  * Alles
+  * Architectuur
+  * Database
+  * Development
+  * Team Explorer
+  * Team Test Load Agent
+  * TFS
