--- a/lifecycle-data/products/internet-explorer-10.yml
+++ b/lifecycle-data/products/internet-explorer-10.yml
@@ -3,25 +3,26 @@ metadata:
   title: Internet Explorer 10
   description: Internet Explorer 10 volgt het levenscyclusbeleid voor onderdelen.
   ms.date: 07/28/2020
-  ms.openlocfilehash: 1faf7eecca13c22c8c54ab7382dfcf21c637cb1f
-  ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: HT
-  ms.contentlocale: nl-NL
-  ms.lasthandoff: 07/29/2020
-  ms.locfileid: "851806"
 name: Internet Explorer 10
-summary: >+
+summary: |+
   Internet Explorer 10 volgt het levenscyclusbeleid voor [onderdelen](/lifecycle/faq/fixed-policy#how-is-a-component-supported-under-the-fixed-lifecycle-policy).
 
 
 products:
-- internet-explorer
+  - internet-explorer
 policyType: component
 supportDates:
   start: 10/30/2012
   end: 01/31/2020
 releases:
-- version: Original Release
-  startDate: 10/30/2012
-  endDate: 01/31/2020
-content: "\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor migratie](https://www.microsoft.com/en-us/WindowsForBusiness/End-of-IE-support)\n* [Veelgestelde vragen over het levenscyclusbeleid van Internet Explorer](/lifecycle/faq/internet-explorer-microsoft-edge)\n\n> [!NOTE]\n> Ga naar de veelgestelde vragen over de levenscyclus van Internet Explorer voor een lijst met ondersteunde besturingssystemen en browsercombinaties."
+  - version: Original Release
+    startDate: 10/30/2012
+    endDate: 01/31/2020
+content: |+
+
+  ## <a name="links"></a>Koppelingen 
+  * [Richtlijnen voor migratie](https://www.microsoft.com/en-us/WindowsForBusiness/End-of-IE-support)
+  * [Veelgestelde vragen over het levenscyclusbeleid van Internet Explorer](/lifecycle/faq/internet-explorer-microsoft-edge)
+
+  > [!NOTE]
+  > Ga naar de veelgestelde vragen over de levenscyclus van Internet Explorer voor een lijst met ondersteunde besturingssystemen en browsercombinaties.
