--- a/lifecycle-data/products/microsoft-biztalk-accelerator-for-hipaa-30.yml
+++ b/lifecycle-data/products/microsoft-biztalk-accelerator-for-hipaa-30.yml
@@ -3,29 +3,28 @@ metadata:
   title: Microsoft BizTalk Accelerator voor HIPAA 3.0
   description: Microsoft BizTalk Accelerator voor HIPAA 3.0 volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
-  keywords: Enterprise,Standard
-  ms.openlocfilehash: 402414833e6f07af15c0b2d94d5cf40a9ebd80a1
-  ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
-  ms.translationtype: HT
-  ms.contentlocale: nl-NL
-  ms.lasthandoff: 09/01/2020
-  ms.locfileid: "935259"
+  keywords: 'Enterprise,Standard'
 name: Microsoft BizTalk Accelerator voor HIPAA 3.0
-summary: >+
+summary: |+
   Microsoft BizTalk Accelerator voor HIPAA 3.0 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
-
 
   Dit is van toepassing op de volgende edities: Enterprise, Standard
 
 products:
-- microsoft-servers
+  - microsoft-servers
 policyType: fixed
 supportDates:
   start: 12/28/2004
   end: 01/12/2010
   extendedEnd: 01/13/2015
 releases:
-- version: Original Release
-  startDate: 12/28/2004
-  endDate: 01/13/2015
-content: "\n\n\n## <a name=\"editions\"></a>Edities \n* Enterprise\n* Standard"
+  - version: Original Release
+    startDate: 12/28/2004
+    endDate: 01/13/2015
+content: |
+
+
+
+  ## <a name="editions"></a>Edities 
+  * Enterprise
+  * Standard
