--- a/lifecycle-data/products/microsoft-teams.yml
+++ b/lifecycle-data/products/microsoft-teams.yml
@@ -3,23 +3,21 @@ metadata:
   title: Microsoft Teams
   description: Microsoft Teams volgt het moderne levenscyclusbeleid.
   ms.date: 07/28/2020
-  ms.openlocfilehash: 9a95c11e5ed20489a0e571cfbab654a977a4dd1c
-  ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: HT
-  ms.contentlocale: nl-NL
-  ms.lasthandoff: 07/29/2020
-  ms.locfileid: "852080"
 name: Microsoft Teams
-summary: >+
+summary: |+
   Microsoft Teams volgt het [moderne](/lifecycle/policies/modern) levenscyclusbeleid.
 
 
 products:
-- office
+  - office
 policyType: modern-online
 supportDates:
   start: 11/01/2016
 releases:
-- version: Original Release
-  startDate: 11/01/2016
-content: "\n## <a name=\"links\"></a>Koppelingen \n* [Systeemvereisten](https://www.microsoft.com/microsoft-365/microsoft-365-and-office-resources)\n* [Onderhoudsinformatie](/microsoftteams/teams-client-update)"
+  - version: Original Release
+    startDate: 11/01/2016
+content: |+
+
+  ## <a name="links"></a>Koppelingen 
+  * [Systeemvereisten](https://www.microsoft.com/microsoft-365/microsoft-365-and-office-resources)
+  * [Onderhoudsinformatie](/microsoftteams/teams-client-update)
