--- a/lifecycle-data/products/softgrid-for-terminal-server-mdop.yml
+++ b/lifecycle-data/products/softgrid-for-terminal-server-mdop.yml
@@ -3,25 +3,25 @@ metadata:
   title: Softgrid voor Terminal Server (MDOP)
   description: Softgrid voor Terminal Server (MDOP) volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
-  ms.openlocfilehash: 678dd6057802afee1e92f8bba4296ee1b620a97d
-  ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: HT
-  ms.contentlocale: nl-NL
-  ms.lasthandoff: 07/28/2020
-  ms.locfileid: "811760"
 name: Softgrid voor Terminal Server (MDOP)
-summary: >+
+summary: |+
   Softgrid voor Terminal Server (MDOP) volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
-- windows
+  - windows
 policyType: fixed-mainstream-only
 supportDates:
   start: 01/01/2007
   end: 01/12/2010
 releases:
-- version: Original Release
-  startDate: 01/01/2007
-  endDate: 01/12/2010
-content: "\n## <a name=\"links\"></a>Koppelingen \n* [Veelgestelde vragen over de levenscyclus - Algemeen](/lifecycle/faq/general-lifecycle)\n\n> [!NOTE]\n> Uitgesloten versies waarvan de ondersteuning eerder werd stopgezet. Ondersteuning voor dit product is onderworpen aan de voorwaarden van zijn aanschaf."
+  - version: Original Release
+    startDate: 01/01/2007
+    endDate: 01/12/2010
+content: |+
+
+  ## <a name="links"></a>Koppelingen 
+  * [Veelgestelde vragen over de levenscyclus - Algemeen](/lifecycle/faq/general-lifecycle)
+
+  > [!NOTE]
+  > Uitgesloten versies waarvan de ondersteuning eerder werd stopgezet. Ondersteuning voor dit product is onderworpen aan de voorwaarden van zijn aanschaf.
