--- a/lifecycle-data/products/system-center-2019-data-protection-manager.yml
+++ b/lifecycle-data/products/system-center-2019-data-protection-manager.yml
@@ -3,26 +3,23 @@ metadata:
   title: System Center 2019 Data Protection Manager
   description: System Center 2019 Data Protection Manager volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
-  ms.openlocfilehash: 32b0f510b582e9c918a5e47ca02792837028cc91
-  ms.sourcegitcommit: e15c32a90036b92acce9ef863cc808ad719160b8
-  ms.translationtype: HT
-  ms.contentlocale: nl-NL
-  ms.lasthandoff: 07/29/2020
-  ms.locfileid: "868753"
 name: System Center 2019 Data Protection Manager
-summary: >+
+summary: |+
   System Center 2019 Data Protection Manager volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
-- msc
+  - msc
 policyType: fixed
 supportDates:
   start: 03/14/2019
   end: 04/09/2024
   extendedEnd: 04/09/2029
 releases:
-- version: Original Release
-  startDate: 03/14/2019
-  endDate: 04/09/2029
-content: "\n## <a name=\"links\"></a>Koppelingen \n* [Productgegevens](/system-center/)"
+  - version: Original Release
+    startDate: 03/14/2019
+    endDate: 04/09/2029
+content: |+
+
+  ## <a name="links"></a>Koppelingen 
+  * [Productgegevens](/system-center/)
