--- a/lifecycle-data/products/visual-studio-2012.yml
+++ b/lifecycle-data/products/visual-studio-2012.yml
@@ -3,35 +3,52 @@ metadata:
   title: Visual Studio 2012
   description: Visual Studio 2012 volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
-  keywords: Agents,Community 2013,Express for Web,Express for Windows 8,Express for Windows Desktop,IntelliTrace Collector,Microsoft Azure Tools,Premium,Professional,Remote Tools,Shell (Integrated),Shell (Isolated),SQL Server Data Tools,Team Explorer,Test Professional 2013,Ultimate,Visual C++ Redistributable,Web Tools Extensions
-  ms.openlocfilehash: 31ae5780a4e6f55abc3d232aafdd43fa70f32be2
-  ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
-  ms.translationtype: HT
-  ms.contentlocale: nl-NL
-  ms.lasthandoff: 09/01/2020
-  ms.locfileid: "937479"
+  keywords: 'Agents,Community 2013,Express for Web,Express for Windows 8,Express for Windows Desktop,IntelliTrace Collector,Microsoft Azure Tools,Premium,Professional,Remote Tools,Shell (Integrated),Shell (Isolated),SQL Server Data Tools,Team Explorer,Test Professional 2013,Ultimate,Visual C++ Redistributable,Web Tools Extensions'
 name: Visual Studio 2012
-summary: >+
+summary: |+
   Visual Studio 2012 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
-
 
   Dit is van toepassing op de volgende edities: Agents, Community 2013, Express voor Web, Express voor Windows 8, Express voor Windows Desktop, IntelliTrace Collector, Microsoft Azure Tools, Premium, Professional, Werkbalk extern, Shell (geïntegreerde modus), Shell (geïsoleerde modus), SQL Server Data Tools, Team Explorer, Test Professional 2013, Ultimate, Visual C++ herdistribueerbaar, Web Tools Extensions
 
 products:
-- vs
+  - vs
 policyType: fixed
 supportDates:
   start: 10/31/2012
   end: 01/09/2018
   extendedEnd: 01/10/2023
 releases:
-- version: Update 5
-  startDate: 08/21/2015
-  endDate: 01/10/2023
-- version: Update 4
-  startDate: 11/12/2013
-  endDate: 10/08/2019
-- version: Original Release
-  startDate: 10/31/2012
-  endDate: 01/10/2023
-content: "\n## <a name=\"links\"></a>Koppelingen \n* [Levenscyclus en onderhoud van Visual Studio-product](/visualstudio/productinfo/vs-servicing-vs)\n\n\n## <a name=\"editions\"></a>Edities \n* Agents\n* Community 2013\n* Express voor Web\n* Express voor Windows 8\n* Express voor Windows Desktop\n* IntelliTrace Collector\n* Microsoft Azure Tools\n* Premium\n* Professional\n* Werkbalk extern\n* Shell (geïntegreerde modus)\n* Shell (geïsoleerde modus)\n* SQL Server Data Tools\n* Team Explorer\n* Test Professional 2013\n* Ultimate\n* Visual C++ herdistribueerbaar\n* Uitbreidingen webwerkset"
+  - version: Update 5
+    startDate: 08/21/2015
+    endDate: 01/10/2023
+  - version: Update 4
+    startDate: 11/12/2013
+    endDate: 10/08/2019
+  - version: Original Release
+    startDate: 10/31/2012
+    endDate: 01/10/2023
+content: |
+
+  ## <a name="links"></a>Koppelingen 
+  * [Levenscyclus en onderhoud van Visual Studio-product](/visualstudio/productinfo/vs-servicing-vs)
+
+
+  ## <a name="editions"></a>Edities 
+  * Agents
+  * Community 2013
+  * Express voor Web
+  * Express voor Windows 8
+  * Express voor Windows Desktop
+  * IntelliTrace Collector
+  * Microsoft Azure Tools
+  * Premium
+  * Professional
+  * Werkbalk extern
+  * Shell (geïntegreerde modus)
+  * Shell (geïsoleerde modus)
+  * SQL Server Data Tools
+  * Team Explorer
+  * Test Professional 2013
+  * Ultimate
+  * Visual C++ herdistribueerbaar
+  * Uitbreidingen webwerkset
