--- a/lifecycle-data/products/windows-10-ltsc-2019.yml
+++ b/lifecycle-data/products/windows-10-ltsc-2019.yml
@@ -3,17 +3,10 @@ metadata:
   title: 'Windows 10 LTSC 2019 '
   description: Windows 10 LTSC 2019 volgt het vaste levenscyclusbeleid.
   ms.date: 07/17/2021
-  keywords: 
-  ms.openlocfilehash: 8940de3348e1a6bf8fddaa081f305f72d053fe53
-  ms.sourcegitcommit: 1629a54febaf89d1050ce02280d58f9ec8736d8c
-  ms.translationtype: HT
-  ms.contentlocale: nl-NL
-  ms.lasthandoff: 07/23/2021
-  ms.locfileid: "2172149"
+  keywords: null
 name: 'Windows 10 LTSC 2019 '
-summary: >+
+summary: |+
   Windows 10 LTSC 2019 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
-
 
 
   Dit is van toepassing op de volgende edities: Enterprise
@@ -21,14 +14,26 @@ summary: >+
 
 
 products:
-- windows
+  - windows
 policyType: fixed
 supportDates:
   start: 11/13/2018
   end: 01/09/2024
   extendedEnd: 01/09/2029
 releases:
-- version: Original Release
-  startDate: 11/13/2018
-  endDate: 01/09/2029
-content: "\n\n## <a name=\"links\"></a>Koppelingen \n* [Windows 10-update van oktober (versie 1809) opnieuw uitgebracht](https://blogs.windows.com/windowsexperience/2018/11/13/resuming-the-rollout-of-the-windows-10-october-2018-update/)\n* [Veelgestelde vragen over Windows 10 LTSC](/lifecycle/faq/windows#what-are-the-requirements-for-servicing-and-updating-the-windows-10-long-term-servicing-channel)\n* [Windows als een service (WaaS)](/windows/deployment/update/waas-quick-start)\n\n\n\n\n## <a name=\"editions\"></a>Edities \n* Enterprise"
+  - version: Original Release
+    startDate: 11/13/2018
+    endDate: 01/09/2029
+content: |+
+
+
+  ## <a name="links"></a>Koppelingen 
+  * [Windows 10-update van oktober (versie 1809) opnieuw uitgebracht](https://blogs.windows.com/windowsexperience/2018/11/13/resuming-the-rollout-of-the-windows-10-october-2018-update/)
+  * [Veelgestelde vragen over Windows 10 LTSC](/lifecycle/faq/windows#what-are-the-requirements-for-servicing-and-updating-the-windows-10-long-term-servicing-channel)
+  * [Windows als een service (WaaS)](/windows/deployment/update/waas-quick-start)
+
+
+
+
+  ## <a name="editions"></a>Edities 
+  * Enterprise
