--- a/lifecycle-data/products/windows-server-2016.yml
+++ b/lifecycle-data/products/windows-server-2016.yml
@@ -3,17 +3,10 @@ metadata:
   title: Windows Server 2016
   description: Windows Server 2016 volgt het vaste levenscyclusbeleid.
   ms.date: 07/09/2021
-  keywords: 
-  ms.openlocfilehash: 07c1dc6d0d6983d6fde9a35f0fad1dacbec2de75
-  ms.sourcegitcommit: c5cb11b464035a1b4d239621b8d4bf06f574da82
-  ms.translationtype: HT
-  ms.contentlocale: nl-NL
-  ms.lasthandoff: 07/28/2021
-  ms.locfileid: "2255238"
+  keywords: null
 name: Windows Server 2016
-summary: >+
+summary: |+
   Windows Server 2016 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
-
 
 
   Dit is van toepassing op de volgende edities: Datacenter, Essentials, MultiPoint Premium, Standard
@@ -21,14 +14,31 @@ summary: >+
 
 
 products:
-- windows
+  - windows
 policyType: fixed
 supportDates:
   start: 10/15/2016
   end: 01/11/2022
   extendedEnd: 01/12/2027
 releases:
-- version: Original Release
-  startDate: 10/15/2016
-  endDate: 01/12/2027
-content: "\n\n## <a name=\"links\"></a>Koppelingen \n* [Productgegevens](/windows-server/get-started/server-basics)\n* [Veelgestelde vragen over de levenscyclus - Windows-producten](/lifecycle/faq/windows)\n* [Onderhoudslevenscycli van Windows-containerbasisafbeeldingen](/virtualization/windowscontainers/deploy-containers/base-image-lifecycle)\n\n\n> [!NOTE]\n> Containers die zijn uitgebracht met Windows Server 2016 volgen dezelfde levenscyclusdatums.\n\n\n## <a name=\"editions\"></a>Edities \n* Datacenter\n* Essentials\n* MultiPoint Premium\n* Standard"
+  - version: Original Release
+    startDate: 10/15/2016
+    endDate: 01/12/2027
+content: |+
+
+
+  ## <a name="links"></a>Koppelingen 
+  * [Productgegevens](/windows-server/get-started/server-basics)
+  * [Veelgestelde vragen over de levenscyclus - Windows-producten](/lifecycle/faq/windows)
+  * [Onderhoudslevenscycli van Windows-containerbasisafbeeldingen](/virtualization/windowscontainers/deploy-containers/base-image-lifecycle)
+
+
+  > [!NOTE]
+  > Containers die zijn uitgebracht met Windows Server 2016 volgen dezelfde levenscyclusdatums.
+
+
+  ## <a name="editions"></a>Edities 
+  * Datacenter
+  * Essentials
+  * MultiPoint Premium
+  * Standard
