--- a/lifecycle-data/products/outlook-2019-for-mac.yml
+++ b/lifecycle-data/products/outlook-2019-for-mac.yml
@@ -3,25 +3,19 @@ metadata:
   title: Outlook 2019 voor Mac
   description: Outlook 2019 voor Mac volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
-  ms.openlocfilehash: 006aa458fb550f820a351c1bf093611c95d2d7c4
-  ms.sourcegitcommit: e15c32a90036b92acce9ef863cc808ad719160b8
-  ms.translationtype: HT
-  ms.contentlocale: nl-NL
-  ms.lasthandoff: 07/29/2020
-  ms.locfileid: "868792"
 name: Outlook 2019 voor Mac
-summary: >+
+summary: |+
   Outlook 2019 voor Mac volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
-- office
+  - office
 policyType: fixed-mainstream-only
 supportDates:
   start: 09/24/2018
   end: 10/10/2023
 releases:
-- version: Original Release
-  startDate: 09/24/2018
-  endDate: 10/10/2023
-content: ''
+  - version: Original Release
+    startDate: 09/24/2018
+    endDate: 10/10/2023
+content: |+
