--- a/lifecycle-data/products/visio-2007.yml
+++ b/lifecycle-data/products/visio-2007.yml
@@ -3,38 +3,40 @@ metadata:
   title: Visio 2007
   description: Visio 2007 volgt het vaste levenscyclusbeleid.
   ms.date: 09/10/2020
-  keywords: Professional,Standard
-  ms.openlocfilehash: 22953eadf5b9f7c8ab1b981d18aebcd4bcecff86
-  ms.sourcegitcommit: c0c65f657b1da8e588fda5bedd3572fb2e3168bc
-  ms.translationtype: HT
-  ms.contentlocale: nl-NL
-  ms.lasthandoff: 09/10/2020
-  ms.locfileid: "1000834"
+  keywords: 'Professional,Standard'
 name: Visio 2007
-summary: >+
+summary: |+
   Visio 2007 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
-
 
   Dit is van toepassing op de volgende edities: Professional, Standard
 
 products:
-- office
+  - office
 policyType: fixed
 supportDates:
   start: 01/27/2007
   end: 10/09/2012
   extendedEnd: 10/10/2017
 releases:
-- version: Service Pack 3
-  startDate: 10/25/2011
-  endDate: 10/10/2017
-- version: Service Pack 2
-  startDate: 04/24/2009
-  endDate: 01/08/2013
-- version: Service Pack 1
-  startDate: 12/11/2007
-  endDate: 07/13/2010
-- version: Original Release
-  startDate: 01/27/2007
-  endDate: 01/13/2009
-content: "\n## <a name=\"links\"></a>Koppelingen \n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n* [Richtlijnen voor migratie](/office/troubleshoot/support/office-2007-not-support)\n\n\n## <a name=\"editions\"></a>Edities \n* Professional\n* Standard"
+  - version: Service Pack 3
+    startDate: 10/25/2011
+    endDate: 10/10/2017
+  - version: Service Pack 2
+    startDate: 04/24/2009
+    endDate: 01/08/2013
+  - version: Service Pack 1
+    startDate: 12/11/2007
+    endDate: 07/13/2010
+  - version: Original Release
+    startDate: 01/27/2007
+    endDate: 01/13/2009
+content: |
+
+  ## <a name="links"></a>Koppelingen 
+  * [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)
+  * [Richtlijnen voor migratie](/office/troubleshoot/support/office-2007-not-support)
+
+
+  ## <a name="editions"></a>Edities 
+  * Professional
+  * Standard
