--- a/lifecycle-data/products/windows-defender-for-windows-server-2016.yml
+++ b/lifecycle-data/products/windows-defender-for-windows-server-2016.yml
@@ -3,21 +3,24 @@ metadata:
   title: Windows Defender for Windows Server 2016
   description: Windows Defender voor Windows Server 2016 volgt het levenscyclusbeleid van onderdelen.
   ms.date: 07/28/2020
-  ms.openlocfilehash: a115c31e3562f17b979200b8da839f873470f6df
-  ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: HT
-  ms.contentlocale: nl-NL
-  ms.lasthandoff: 07/28/2020
-  ms.locfileid: "812275"
 name: Windows Defender for Windows Server 2016
-summary: "Windows Defender voor Windows Server 2016 volgt het levenscyclusbeleid voor [onderdelen](/lifecycle/faq/fixed-policy#how-is-a-component-supported-under-the-fixed-lifecycle-policy). \n\n\n"
+summary: |+
+  Windows Defender voor Windows Server 2016 volgt het levenscyclusbeleid voor [onderdelen](/lifecycle/faq/fixed-policy#how-is-a-component-supported-under-the-fixed-lifecycle-policy). 
+
+
 products:
-- windows
+  - windows
 policyType: component
 supportDates:
   start: 10/15/2016
 releases:
-- version: Original Release
-  startDate: 10/15/2016
-  endDate: 01/12/2027
-content: "\n## <a name=\"links\"></a>Koppelingen \n* [Windows Server 2016](/lifecycle/products/windows-server-2016)\n\n> [!NOTE]\n> Dit onderdeel volgt de levenscyclus van het moederproduct, Windows Server 2016."
+  - version: Original Release
+    startDate: 10/15/2016
+    endDate: 01/12/2027
+content: |+
+
+  ## <a name="links"></a>Koppelingen 
+  * [Windows Server 2016](/lifecycle/products/windows-server-2016)
+
+  > [!NOTE]
+  > Dit onderdeel volgt de levenscyclus van het moederproduct, Windows Server 2016.
