--- a/lifecycle-data/products/microsoft-office-communicator-2007.yml
+++ b/lifecycle-data/products/microsoft-office-communicator-2007.yml
@@ -4,23 +4,30 @@ metadata:
   description: Microsoft Office Communicator 2007 volgt het vaste levenscyclusbeleid.
   ms.date: 09/10/2020
   keywords: Standard
-  ms.openlocfilehash: dbb46e37a768b34dd9240524f45723daa498f825
-  ms.sourcegitcommit: c0c65f657b1da8e588fda5bedd3572fb2e3168bc
-  ms.translationtype: HT
-  ms.contentlocale: nl-NL
-  ms.lasthandoff: 09/10/2020
-  ms.locfileid: "1001680"
 name: Microsoft Office Communicator 2007
-summary: "Microsoft Office Communicator 2007 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.\n\nDit geldt voor de volgende edities: Standaard\n\n> [!IMPORTANT]\n> De ondersteuning voor dit product is beëindigd. \n"
+summary: |
+  Microsoft Office Communicator 2007 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
+
+  Dit geldt voor de volgende edities: Standaard
+
+  > [!IMPORTANT]
+  > De ondersteuning voor dit product is beëindigd. 
 products:
-- office
+  - office
 policyType: fixed
 supportDates:
   start: 10/27/2007
   end: 01/08/2013
   extendedEnd: 01/09/2018
 releases:
-- version: Original Release
-  startDate: 10/27/2007
-  endDate: 01/09/2018
-content: "\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor migratie](https://blogs.technet.microsoft.com/nexthop/2016/02/22/end-of-extended-support-for-office-communicator-and-office-communications-server/)\n\n\n## <a name=\"editions\"></a>Edities \n* Standard"
+  - version: Original Release
+    startDate: 10/27/2007
+    endDate: 01/09/2018
+content: |
+
+  ## <a name="links"></a>Koppelingen 
+  * [Richtlijnen voor migratie](https://blogs.technet.microsoft.com/nexthop/2016/02/22/end-of-extended-support-for-office-communicator-and-office-communications-server/)
+
+
+  ## <a name="editions"></a>Edities 
+  * Standard
