commit translated contents

--- a/lifecycle-data/products/windows-server-2022.yml
+++ b/lifecycle-data/products/windows-server-2022.yml
@@ -2,21 +2,21 @@
 metadata:
   title: Windows Server 2022
   description: Windows Server 2022 volgt het vaste levenscyclusbeleid.
-  ms.date: 08/31/2021
+  ms.date: 09/23/2021
   keywords: 
-  ms.openlocfilehash: 8c3cf914c65ac5fe4d13296398a4f0bea73eb7f8
-  ms.sourcegitcommit: acb9601132598295da5c9f5a537f1a1af401417a
+  ms.openlocfilehash: 1ed53da378c243b1cb45d78aeb9770a1f6ec3e1d
+  ms.sourcegitcommit: 7c3fe4207bf2db7fe5db69c9c50fd1afb6070311
   ms.translationtype: HT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 09/01/2021
-  ms.locfileid: "3173031"
+  ms.lasthandoff: 09/30/2021
+  ms.locfileid: "3508011"
 name: Windows Server 2022
 summary: >+
   Windows Server 2022 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 
-  Dit is van toepassing op de volgende edities: Datacenter, Datacenter: Azure Edition, Standaard
+  Dit geldt voor de volgende edities: Datacenter, Datacenter: Azure-editie, Essentials, Standard
 
 
 
@@ -31,4 +31,4 @@ releases:
 - version: Original Release
   startDate: 08/18/2021
   endDate: 10/14/2031
-content: "\n\n## <a name=\"links\"></a>Koppelingen \n* [Veelgestelde vragen over de levenscyclus - Windows](/lifecycle/faq/windows)\n* [Productgegevens](/windows-server/windows-server-2022/get-started/whats-new)\n\n\n> [!NOTE]\n> Containers die zijn uitgebracht met Windows Server 2022 volgen dezelfde levenscyclusdatums. \n\n\n## <a name=\"editions\"></a>Edities \n* Datacenter\n* Datacenter: Azure Edition\n* Standard"
+content: "> [!TIP]\n> Microsoft Edge volgt het [moderne levenscyclusbeleid](https://docs.microsoft.com/lifecycle/policies/modern). Raadpleeg de [documentatie over de levenscyclus van Edge](https://docs.microsoft.com/deployedge/microsoft-edge-support-lifecycle) voor informatie over het up-to-date houden van deze browser en voor ondersteuning.\n\n\n## <a name=\"links\"></a>Koppelingen \n* [Veelgestelde vragen over de levenscyclus - Windows](/lifecycle/faq/windows)\n* [Productgegevens](/windows-server/windows-server-2022/get-started/whats-new)\n\n\n> [!NOTE]\n> Containers die zijn uitgebracht met Windows Server 2022 volgen dezelfde levenscyclusdatums. \n\n\n## <a name=\"editions\"></a>Edities \n* Datacenter\n* Datacenter: Azure Edition\n* Essentials\n* Standard"
