--- a/lifecycle-data/products/visual-studio-2019.yml
+++ b/lifecycle-data/products/visual-studio-2019.yml
@@ -2,14 +2,14 @@
 metadata:
   title: Visual Studio 2019
   description: Visual Studio 2019 volgt het beleid voor de vaste levenscyclus.
-  ms.date: 09/20/2021
+  ms.date: 10/26/2021
   keywords: 
-  ms.openlocfilehash: e23223d9d0a238c2d9784b25ab84a2195705951c
-  ms.sourcegitcommit: b7b46fb942fa16a0d96d486f6b591e470c048157
+  ms.openlocfilehash: 0f9b64cda589aef8e2cee22444c63d61d955e158
+  ms.sourcegitcommit: 6ea3221fd5475440480515f04f33988656d71748
   ms.translationtype: HT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 09/21/2021
-  ms.locfileid: "3460599"
+  ms.lasthandoff: 11/02/2021
+  ms.locfileid: "3546703"
 name: Visual Studio 2019
 summary: >+
   Visual Studio 2019 volgt het beleid voor de [vaste](/lifecycle/policies/fixed) levenscyclus.
@@ -43,4 +43,4 @@ releases:
 - version: Version 16.0
   startDate: 04/02/2019
   endDate: 01/12/2021
-content: "\n\n## <a name=\"links\"></a>Koppelingen \n* [Visual Studio blog-aankondigingen](https://devblogs.microsoft.com/visualstudio/)\n* [Onderhoudsinformatie](/visualstudio/productinfo/vs-servicing-vs)\n* [Visual Studio 2019-downloadpagina](https://my.visualstudio.com/Downloads?q=Visual%20Studio%202019)\n* [Visual Studio 2019-releaseopmerkingen](/visualstudio/releases/2019/release-notes)\n\n\n> [!NOTE]\n> Visual Studio 2019-versies van de volgende componenten worden geleverd met en ondersteund als onderdeel van de levenscyclus van Visual Studio 2019: Agents, Opbouwhulpmiddelen, Community, Enterprise, IntelliTrace Standalone Collector, Prestatiehulpprogramma's, Werkbalk extern, Team Explorer, Visual C++ herdistribueerbaar\n\n\n## <a name=\"editions\"></a>Edities \n* Community\n* Enterprise\n* Professional"
+content: "\n\n## <a name=\"links\"></a>Koppelingen \n* [Visual Studio blog-aankondigingen](https://devblogs.microsoft.com/visualstudio/)\n* [Ondersteuning en informatie over de levenscyclus](/visualstudio/releases/2019/servicing-vs2019)\n* [Visual Studio 2019-downloadpagina](https://my.visualstudio.com/Downloads?q=Visual%20Studio%202019)\n* [Visual Studio 2019-releaseopmerkingen](/visualstudio/releases/2019/release-notes)\n\n\n> [!NOTE]\n> Visual Studio 2019-versies van de volgende componenten worden geleverd met en ondersteund als onderdeel van de levenscyclus van Visual Studio 2019: Agents, Opbouwhulpmiddelen, IntelliTrace Standalone Collector, Prestatiehulpprogramma's, Werkbalk extern, Team Explorer en Visual C++ herdistribueerbaar\n\n\n## <a name=\"editions\"></a>Edities \n* Community\n* Enterprise\n* Professional"
