--- a/lifecycle-data/products/windows-7.yml
+++ b/lifecycle-data/products/windows-7.yml
@@ -2,61 +2,37 @@
 metadata:
   title: Windows 7
   description: Windows 7 volgt het vaste levenscyclusbeleid.
-  ms.date: 09/01/2020
-  keywords: 'Enterprise,Enterprise N,Home Basic,Home Premium,Home Premium N,Professional,Professional for Embedded Systems,Professional N,Starter,Starter N,Ultimate,Ultimate for Embedded Systems,Ultimate N'
+  ms.date: 10/19/2021
+  keywords: 
+  ms.openlocfilehash: 006d77b325d21e4696c54f95f7e95804aa5420de
+  ms.sourcegitcommit: 6ea3221fd5475440480515f04f33988656d71748
+  ms.translationtype: HT
+  ms.contentlocale: nl-NL
+  ms.lasthandoff: 11/02/2021
+  ms.locfileid: "3546666"
 name: Windows 7
-summary: |
-  Windows 7 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid. 
-
-  Dit is van toepassing op de volgende edities: Enterprise, Enterprise N, Home Basic, Home Premium, Home Premium N, Professional, Professional for Embedded Systems, Professional N, Starter, Starter N, Ultimate, Ultimate for Embedded Systems, Ultimate N
-
-  > [!IMPORTANT]
-  > De ondersteuning voor dit product is beëindigd. Zie hieronder de richtlijnen voor migratie. 
+summary: "Windows 7 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid. \n\n\nDit is van toepassing op de volgende edities: Enterprise, Enterprise N, Home Basic, Home Premium, Home Premium N, Professional, Professional for Embedded Systems, Professional N, Starter, Starter N, Ultimate, Ultimate for Embedded Systems, Ultimate N\n\n\n> [!IMPORTANT]\n> De ondersteuning voor dit product is beëindigd. Zie hieronder de richtlijnen voor migratie. \n\n"
 products:
-  - windows
+- windows
 policyType: fixed
 supportDates:
   start: 10/22/2009
   end: 01/13/2015
   extendedEnd: 01/14/2020
 releases:
-  - version: Extended Security Update Year 3*
-    startDate: 01/11/2022
-    endDate: 01/10/2023
-  - version: Extended Security Update Year 2*
-    startDate: 01/12/2021
-    endDate: 01/11/2022
-  - version: Extended Security Update Year 1*
-    startDate: 01/14/2020
-    endDate: 01/12/2021
-  - version: Service Pack 1
-    startDate: 02/22/2011
-    endDate: 01/14/2020
-  - version: Original Release
-    startDate: 10/22/2009
-    endDate: 04/09/2013
-content: |
-  > [!TIP]
-  > '* Uitgebreide beveiligingsupdates zijn beschikbaar via specifieke volumelicentie-programma's voor Windows 7 Professional-, Enterprise- en Professional for Embedded Systems-edities van dit product, tot drie jaar extra na einde van de ondersteuning. Neem contact op met uw Microsoft-partner of accountteam voor meer informatie. 
-
-  ## <a name="links"></a>Koppelingen 
-  * [Richtlijnen voor migratie](https://support.microsoft.com/help/4057281)
-  * [Upgraden van Windows 7 naar Windows 10](/microsoft-365/enterprise/desktop-deployment-center-home?view=o365-worldwide)
-  * [Extended Security Update (ESU) programma](/lifecycle/faq/extended-security-updates)
-  * [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)
-
-
-  ## <a name="editions"></a>Edities 
-  * Enterprise
-  * Enterprise N
-  * Home Basic
-  * Home Premium
-  * Home Premium N
-  * Professional
-  * Professional for Embedded Systems
-  * Professional N
-  * Starter
-  * Starter N
-  * Ultimate
-  * Ultimate for Embedded Systems
-  * Ultimate N
+- version: Extended Security Update Year 3*
+  startDate: 01/12/2022
+  endDate: 01/10/2023
+- version: Extended Security Update Year 2*
+  startDate: 01/13/2021
+  endDate: 01/11/2022
+- version: Extended Security Update Year 1*
+  startDate: 01/14/2020
+  endDate: 01/12/2021
+- version: Service Pack 1
+  startDate: 02/22/2011
+  endDate: 01/14/2020
+- version: Original Release
+  startDate: 10/22/2009
+  endDate: 04/09/2013
+content: "> [!TIP]\n> * Uitgebreide beveiligingsupdates (ESU) zijn beschikbaar via specifieke volumelicentieprogramma's voor Windows 7 Professional, Enterprise en Professional for Embedded Systems-edities van dit product, tot drie jaar na het einde van de ondersteuning. Neem contact op met uw Microsoft-partner of accountteam voor meer informatie. \n\n\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor migratie](https://support.microsoft.com/help/4057281)\n* [Upgraden van Windows 7 naar Windows 10](/microsoft-365/enterprise/desktop-deployment-center-home?view=o365-worldwide)\n* [Extended Security Update (ESU) programma](/lifecycle/faq/extended-security-updates)\n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n\n\n\n\n## <a name=\"editions\"></a>Edities \n* Enterprise\n* Enterprise N\n* Home Basic\n* Home Premium\n* Home Premium N\n* Professional\n* Professional for Embedded Systems\n* Professional N\n* Starter\n* Starter N\n* Ultimate\n* Ultimate for Embedded Systems\n* Ultimate N"
